Fix alignment of rosetta site title

--- a/mu-plugins/blocks/global-header-footer/postcss/header/logos.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/logos.pcss
@@ -75,6 +75,13 @@
 			max-width: 15em;
 			flex-basis: min-content;
 			flex-shrink: 0;
+			padding-top: 31px;
+			padding-bottom: 32px;
+		}
+
+		@media (--short-screen) {
+			padding-bottom: 16px;
+			padding-top: 16px;
 		}
 
 		@media (--desktop-wide) {
